[rules_jvm] Specify compiler options directly (not via JpsJavaCompilerConfiguration) in BazelJavaBuilderKt#getCompilationOptions
Also removes BazelJpsModelLoaderKt#configureJavac.

GitOrigin-RevId: 7d38c81145bde7b61dd14ddf6d247772a5770c39